# intel-gpu-exporter

./: .envrc.project  .gitignore  .semgrepignore  flake.nix  intel-gpu-exporter.py  pyproject.toml
.github/: README.md  renovate.json
.github/actions/init/: action.yaml
.github/workflows/: check.yaml  release.yaml  update.yaml  vulnerable.yaml
examples/: simple-grafana-dash.json
src/intel_gpu_exporter/: exporter.py
tests/: data.json
